apps/nested/k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: app
spec:
  listeners:
    - hostname: &hostname nested.lolwtf.ca
      tls:
        certificateRefs:
          - kind: Secret
            name: *hostname
